<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.boroscsaba.commonlibrary.drawer.DataPolicyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="58dp">

        <LinearLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:text="@string/data_policy_first_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/data_policy_consent"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/data_policy_advertising_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:text="@string/data_policy_advertising_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/data_policy_admob_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:text="@string/data_policy_admob_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/data_policy_analytics_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:text="@string/data_policy_analytics_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/data_policy_owner_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:text="@string/data_policy_owner_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/data_policy_last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dataPolicyLink"
                android:layout_marginTop="10dp"
                android:text="@string/data_policy_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>