<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/star1"
        android:focusable="true"
        android:src="@drawable/ic_star_black_48dp"
        android:tint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/star2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_black_48dp"
        android:contentDescription="@string/star2"
        android:tint="#FFEB3B"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/star1"
        app:layout_constraintEnd_toStartOf="@+id/star3"
        app:layout_constraintStart_toEndOf="@+id/star1"
        app:layout_constraintTop_toTopOf="@+id/star1" />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_black_48dp"
        android:contentDescription="@string/star3"
        android:tint="#FFEB3B"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/star1"
        app:layout_constraintEnd_toStartOf="@+id/star4"
        app:layout_constraintStart_toEndOf="@+id/star2"
        app:layout_constraintTop_toTopOf="@+id/star1" />

    <ImageView
        android:id="@+id/star4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_black_48dp"
        android:contentDescription="@string/star4"
        android:tint="#FFEB3B"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/star1"
        app:layout_constraintEnd_toStartOf="@+id/star5"
        app:layout_constraintStart_toEndOf="@+id/star3"
        app:layout_constraintTop_toTopOf="@+id/star1" />

    <ImageView
        android:id="@+id/star5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_black_48dp"
        android:contentDescription="@string/star5"
        android:tint="#FFEB3B"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/star1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/star4"
        app:layout_constraintTop_toTopOf="@+id/star1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/rate_us_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/rate_us_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>