<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.boroscsaba.commonlibrary.views.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00000000"
        app:borderType="rounded|solid|shadow"
        app:borderColor="#bbbbbb"
        app:backgroundColor="#ffffff">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_rate_us"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/star1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:contentDescription="@string/star1"
            android:focusable="true"
            android:src="@drawable/ic_star_black_48dp"
            android:tint="#FFEB3B"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/desc"
            app:layout_constraintEnd_toStartOf="@+id/star2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_star_black_48dp"
            android:contentDescription="@string/star2"
            android:tint="#FFEB3B"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:layout_constraintEnd_toStartOf="@+id/star3"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toTopOf="@+id/star1" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_star_black_48dp"
            android:contentDescription="@string/star3"
            android:tint="#FFEB3B"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:layout_constraintEnd_toStartOf="@+id/star4"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toTopOf="@+id/star1" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_star_black_48dp"
            android:contentDescription="@string/star4"
            android:tint="#FFEB3B"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toTopOf="@+id/star1" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_star_black_48dp"
            android:contentDescription="@string/star5"
            android:tint="#FFEB3B"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toTopOf="@+id/star1" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_rate_us_desc"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/star1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    </com.boroscsaba.commonlibrary.views.ConstraintLayout>

</LinearLayout>